--- a/css/Rendus.css
+++ b/css/Rendus.css
@@ -1,3 +1,116 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+#nav {
+    float: left;
+    display: table;
+    background-color: green;
+    width: 250px;
+    height: 88%;
+}
+
+#inner_nav {
+    display: table-cell;
+    vertical-align: middle;
+    font-family: "Open Sans";
+}
+
+#nav h2 {
+    color: #B7C1C2;
+    font-size: 20px;
+    padding: 20px;
+}
+
+ul div {
+    font-size: 17px;
+    height: 50px;
+    margin: auto;
+    border-radius: 55px;
+    min-width: 85%;
+    display: table;
+}
+
+ul div:first-child {
+    min-width: 95%;
+    background-color: #F1F1F1;
+}
+
+ul div li {
+    text-align: center;
+    float: inline-start;
+}
+
+ul div:not(:first-child) {
+    margin-top: 60px;
+}
+
+ul div:not(:last-child) {
+    margin-bottom: 25px;
+}
+
+ul li {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-weight: 600;
+    margin: auto;
+}
+
+#nav img {
+    position: absolute;
+    width: 30px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-top: 10px;
+}
+
+#monCompte img {
+    width: 30px;
+}
+
+
+/* Header */
+
+#header {
+    background-color: white;
+    height: 12%;
+    font-family: "Open sans";
+}
+
+#logo {
+    width: 120px;
+    margin-left: 65px;
+    margin-top: 25px;
+}
+
+#header div {
+    float: right;
+    display: flex;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#header div h1 {
+    transform: translateY(25%);
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+#compteHeader img {
+    width: 70px;
+}
+
 form {
     display: flex;
     flex-direction: column;
