--- a/css/Rendus.css
+++ b/css/Rendus.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 * {
     margin: 0;
     padding: 0;
@@ -9,12 +9,13 @@
 html,
 body {
     height: 100%;
+    background-color: #f4f4f4;
 }
 
 #nav {
     float: left;
     display: table;
-    background-color: green;
+    background-color: white;
     width: 250px;
     height: 88%;
 }
@@ -26,7 +27,7 @@ body {
 }
 
 #nav h2 {
-    color: #B7C1C2;
+    color: #b7c1c2;
     font-size: 20px;
     padding: 20px;
 }
@@ -42,7 +43,20 @@ ul div {
 
 ul div:first-child {
     min-width: 95%;
-    background-color: #F1F1F1;
+    background-color: #f1f1f1;
+}
+
+li {
+    transition: color ease-in-out 0.2s;
+}
+
+li:hover {
+    cursor: pointer;
+    color: #386eb2;
+}
+
+.selected {
+    color: #386eb2;
 }
 
 ul div li {
@@ -103,26 +117,136 @@ ul li {
 
 #header div h1 {
     transform: translateY(25%);
-    margin-left: 35px;
-    margin-right: 35px;
+    margin-left: 45px;
+    font-size: 25px;
+    margin-right: 100px;
+}
+
+#header div h1:hover {
+    cursor: pointer;
 }
 
 #compteHeader img {
     width: 70px;
 }
 
+#content {
+    background-color: white;
+    width: 83%;
+    height: 85%;
+    margin-left: 15%;
+    margin-top: 0.8%;
+}
+
 form {
     display: flex;
     flex-direction: column;
-    width: 250px;
+}
+
+#numeroRapport {
+    color: #80a2cd;
+    font-family: "Open Sans";
+    font-size: 35px;
+}
+
+#searchRapport {
+    width: 200px;
+    height: 30px;
+    border: #386eb2 solid 1px;
+    font-size: 20px;
+    border-radius: 55px;
+    outline: none;
+}
+
+#search {
+    background-color: #386eb2;
+    outline: none;
+    border-radius: 55px;
+    border: none;
+    width: 150px;
+    height: 25px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+form hr {
+    width: 105%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: -25px;
+    height: 0.01px;
+    background-color: #80a2cd;
+}
+
+#inner_content {
+    padding: 100px;
+}
+
+#dateLabel {
+    font-size: 35px;
+    color: #80a2cd;
+    font-family: "Open sans";
+}
+
+#dateInput {
+    border: none;
+    min-width: 150px;
+    max-width: 250px;
+    font-size: 25px;
+    border-bottom: solid #386eb2 1px;
+}
+
+label {
+    margin-top: 15px;
+}
+
+#labelPraticien {
+    font-size: 35px;
+    color: #80a2cd;
+    font-family: "Open sans";
+}
+
+#inputPraticien {
+    font-family: "Open Sans";
+    border: none;
+    min-width: 150px;
+    max-width: 250px;
+    font-size: 25px;
+    border-bottom: solid #386eb2 1px;
+}
+
+#labelMotif {
+    font-size: 35px;
+    color: #80a2cd;
+    font-family: "Open sans";
+}
+
+#inputMotif {
+    font-family: "Open Sans";
+    border: none;
+    min-width: 150px;
+    max-width: 250px;
+    font-size: 25px;
+    border-bottom: solid #386eb2 1px;
 }
 
 #bilan {
-    height: 250px;
-    padding: 12px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
-    resize: none;
+    display: flex;
+    flex-direction: column;
+}
+
+#labelBilan {
+    font-size: 35px;
+    color: #80a2cd;
+    font-family: "Open sans";
+}
+
+#inputBilan {
+    font-family: "Open Sans";
+    border: none;
+    min-width: 150px;
+    max-width: 250px;
+    font-size: 15px;
+    border-bottom: solid #386eb2 1px;
 }
