--- a/css/Rendus.css
+++ b/css/Rendus.css
@@ -250,3 +250,23 @@ label {
     font-size: 15px;
     border-bottom: solid #386eb2 1px;
 }
+
+#showPraticien {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#medicament div {
+    display: flex;
+    font-family: "Open Sans";
+    color: black;
+    font-size: 12px;
+}
+
+#offre {
+    font-size: 35px;
+    color: #80a2cd;
+    font-family: "Open sans";
+}
