--- a/css/Rendus.css
+++ b/css/Rendus.css
@@ -180,7 +180,8 @@ form hr {
 }
 
 #inner_content {
-    padding: 100px;
+    padding: 90px;
+    height: 70%;
 }
 
 #dateLabel {
@@ -311,4 +312,29 @@ label {
 
 #Update {
     visibility: hidden;
+}
+
+#grayScreen {
+    display: none;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 15;
+}
+
+#nouveauFormDiv {
+    display: none;
+    background-color: white;
+    width: 70%;
+    height: 70%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 15;
 }
