--- a/resources/css/VisiteurPage.css
+++ b/resources/css/VisiteurPage.css
@@ -1,139 +1,147 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
-* {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-}
-
-html,
-body {
-    height: 100%;
-    background-color: #f4f4f4;
-}
-
-#nav {
-    float: left;
-    display: table;
-    background-color: white;
-    width: 250px;
-    height: 88%;
-}
-
-#inner_nav {
-    display: table-cell;
-    vertical-align: middle;
-    font-family: "Open Sans";
-}
-
-#nav h2 {
-    color: #b7c1c2;
-    font-size: 20px;
-    padding: 20px;
-}
-
-ul div {
-    font-size: 17px;
-    height: 50px;
-    margin: auto;
-    border-radius: 55px;
-    min-width: 85%;
-    display: table;
-}
-
-ul div:first-child {
-    min-width: 95%;
-    background-color: #f1f1f1;
-}
-
-li {
-    transition: color ease-in-out 0.2s;
-}
-
-li:hover {
-    cursor: pointer;
-    color: #386eb2;
-}
-
-.selected {
-    color: #386eb2;
-}
-
-ul div li {
-    text-align: center;
-    float: inline-start;
-}
-
-ul div:not(:first-child) {
-    margin-top: 60px;
-}
-
-ul div:not(:last-child) {
-    margin-bottom: 25px;
-}
-
-ul li {
-    display: table-cell;
-    vertical-align: middle;
-    width: 100%;
-    font-weight: 600;
-    margin: auto;
-}
-
-#nav img {
-    position: absolute;
-    width: 30px;
-    margin-right: 15px;
-    margin-left: 15px;
-    margin-top: 10px;
-}
-
-#monCompte img {
-    width: 30px;
-}
-
-
-/* Header */
-
-#header {
-    background-color: white;
-    height: 12%;
-    font-family: "Open sans";
-}
-
-#logo {
-    width: 120px;
-    margin-left: 65px;
-    margin-top: 25px;
-}
-
-#header div {
-    float: right;
-    display: flex;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-#header div h1 {
-    transform: translateY(25%);
-    margin-left: 45px;
-    font-size: 25px;
-    margin-right: 100px;
-}
-
-#header div h1:hover {
-    cursor: pointer;
-}
-
-#compteHeader img {
-    width: 70px;
-}
-
-.container-fluid {
-    height: 88%;
-}
-
-#FormRendus {
-    height: 100% !important;
-}
+    @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+    * {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        list-style: none;
+    }
+    
+    html,
+    body {
+        height: 100%;
+        background-color: #f4f4f4;
+    }
+    
+    #nav {
+        float: left;
+        display: table;
+        background-color: white;
+        width: 250px;
+        height: 88%;
+    }
+    
+    #inner_nav {
+        display: table-cell;
+        vertical-align: middle;
+        font-family: "Open Sans";
+    }
+    
+    #nav h2 {
+        color: #b7c1c2;
+        font-size: 20px;
+        padding: 20px;
+    }
+    
+    ul div {
+        font-size: 17px;
+        height: 50px;
+        margin: auto;
+        border-radius: 55px;
+        min-width: 85%;
+        display: table;
+    }
+    
+    ul div:first-child {
+        min-width: 95%;
+        background-color: #f1f1f1;
+    }
+    
+    li {
+        transition: color ease-in-out 0.2s;
+    }
+    
+    li:hover {
+        cursor: pointer;
+        color: #386eb2;
+    }
+    
+    .selected {
+        color: #386eb2;
+    }
+    
+    ul div li {
+        text-align: center;
+        float: inline-start;
+    }
+    
+    ul div:not(:first-child) {
+        margin-top: 60px;
+    }
+    
+    ul div:not(:last-child) {
+        margin-bottom: 25px;
+    }
+    
+    ul li {
+        display: table-cell;
+        vertical-align: middle;
+        width: 100%;
+        font-weight: 600;
+        margin: auto;
+    }
+    
+    #nav img {
+        position: absolute;
+        width: 30px;
+        margin-right: 15px;
+        margin-left: 15px;
+        margin-top: 10px;
+    }
+    
+    #monCompte img {
+        width: 30px;
+    }
+    /* Header */
+    
+    #header {
+        background-color: white;
+        height: 12%;
+        font-family: "Open sans";
+    }
+    
+    #logo {
+        width: 120px;
+        margin-left: 65px;
+        margin-top: 25px;
+    }
+    
+    #header div {
+        float: right;
+        display: flex;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    
+    #header div h1 {
+        transform: translateY(25%);
+        margin-left: 45px;
+        font-size: 25px;
+        margin-right: 100px;
+    }
+    
+    #header div h1:hover {
+        cursor: pointer;
+    }
+    
+    #compteHeader img {
+        width: 70px;
+    }
+    
+    .container-fluid {
+        height: 88%;
+    }
+    
+    #FormRendus {
+        height: 100% !important;
+    }
+    
+    form {
+        zoom: 125%;
+    }
+    
+    input[type=text][disabled],
+    textarea[disabled],
+    select[disabled] {
+        background-color: white !important;
+    }
