--- a/resources/css/LandingPage.css
+++ b/resources/css/LandingPage.css
@@ -1,3 +1,65 @@
-h1 {
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    background-image: url("../Images/background.png");
+    background-size: cover;
+}
+
+#centerDiv {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 350px;
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 3px 2px 12px 0px rgba(0, 0, 0, 0.6);
+    display: table;
+}
+
+#centerDiv div:not(#loginName) {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#centerDiv h1 {
+    color: #80A2CD;
+    font-weight: bold;
+}
+
+#centerDiv a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #386EB2;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: large;
+    margin: 15px;
+}
+
+#loginName {
+    text-align: left;
+    position: absolute;
+    display: flex;
+}
+
+#loginName h2 {
+    color: #296bc2;
+    font-size: large;
+}
+
+#loginName #name {
     color: red;
+    font-weight: bold;
+    margin-left: 10px;
 }
