--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -1,5 +1,51 @@
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    background-image: url("../Images/background.png");
+    background-size: cover;
+}
+
+#centerDiv {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 350px;
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 15px;
+    box-shadow: 3px 2px 12px 0px rgba(0, 0, 0, 0.6);
+    zoom: 120%;
+}
+
 #loginForm {
     display: flex;
     flex-direction: column;
     width: 250px;
+    text-align: left;
+}
+
+#loginForm label {
+    margin-top: 15px;
+    color: #80A2CD;
+    font-weight: bold;
+    font-size: large;
+}
+
+#loginForm input:not(#buttonSeCo) {
+    background-color: #9EBCE2;
+    font-weight: 600;
+}
+
+#wrongPassword {
+    color: red;
+    font-size: medium;
 }
